--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "require": {
     "php": "^7.2",
-    "guzzlehttp/guzzle": "^7.0",
+    "guzzlehttp/guzzle": "^6.0||^7.0",
     "ext-json": "*"
   },
   "autoload": {
